force-app/main/default/Objects/Course_Module_Activity__c/Course_Module_Activity__c.object-meta.xml
<CustomObject>
    <description>Single activity for a specific course module</description>
    <label>Course Module Activity</label>
    <nameField>
        <label>CM Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Module Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>