force-app/main/default/Objects/Course_Module_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>Category of the activity</description>
    <inlineHelpText>Category of the activity</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assess Your Knowledge</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Consent</fullName>
            </value>
            <value>
                <fullName>Course/Module Evaluation</fullName>
            </value>
            <value>
                <fullName>Course/Module Feedback</fullName>
            </value>
            <value>
                <fullName>eBook</fullName>
            </value>
            <value>
                <fullName>Exam</fullName>
            </value>
            <value>
                <fullName>File Assignment</fullName>
            </value>
            <value>
                <fullName>Form - Introduce Yourself</fullName>
            </value>
            <value>
                <fullName>Instructor Evaluation</fullName>
            </value>
            <value>
                <fullName>Live Session</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Reading Assignment</fullName>
            </value>
            <value>
                <fullName>Reflection</fullName>
            </value>
            <value>
                <fullName>Self Assessment</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Think &amp; Share</fullName>
            </value>
            <value>
                <fullName>Upload Work</fullName>
            </value>
            <value>
                <fullName>Video Lesson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>