force-app/main/default/Objects/Course_Module_Activity__c/fields/Course_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_ID__c</fullName>
    <formula>Course_Module__r.Course__c</formula>
    <label>Course ID</label>
    <type>Text</type>
</CustomField>