force-app/main/default/Objects/Course_Module_Activity__c/fields/Course_Modue_Activity_Reference_Link__c.field-meta.xml
<CustomField>
    <fullName>Course_Modue_Activity_Reference_Link__c</fullName>
    <description>Link to folder where module activity files are saved</description>
    <inlineHelpText>Link to folder where module activity files are saved</inlineHelpText>
    <label>Reference Link</label>
    <type>Url</type>
</CustomField>