force-app/main/default/Objects/Course_Module_Activity__c/fields/Course_Module__c.field-meta.xml
<CustomField>
    <fullName>Course_Module__c</fullName>
    <label>Course Module</label>
    <referenceTo>Course_Module__c</referenceTo>
    <relationshipLabel>Course Module Activities</relationshipLabel>
    <relationshipName>Course_Module_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>