force-app/main/default/Objects/Course_Module_Activity__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>General overview of the activity</description>
    <inlineHelpText>General overview of the activity</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>