force-app/main/default/objects/Course_Module_Activity__c/fields/Estimated_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Minutes__c</fullName>
    <description>Expected learner time. Penny uses for pacing context.</description>
    <inlineHelpText>Expected learner time. Penny uses for pacing context.</inlineHelpText>
    <label>Estimated Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>