force-app/main/default/objects/Course_Module_Activity__c/fields/External_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Activity_ID__c</fullName>
    <description>Google Classroom course WorkId dedup key</description>
    <externalId>true</externalId>
    <inlineHelpText>Google Classroom course WorkId dedup key</inlineHelpText>
    <label>External Activity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>