force-app/main/default/Objects/Course_Module_Activity__c/fields/GoogleLink__c.field-meta.xml
<CustomField>
    <fullName>GoogleLink__c</fullName>
    <label>Google Link</label>
    <type>Url</type>
</CustomField>