force-app/main/default/Objects/Course_Module_Activity__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Define the order of the activity</description>
    <inlineHelpText>Define the order of the activity</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>