force-app/main/default/objects/Course_Module_Activity__c/fields/Points_Possible__c.field-meta.xml
<CustomField>
    <fullName>Points_Possible__c</fullName>
    <description>Max points from LMS. Maps from GC maxPoints. Used to compute Grade_Pct__c on completion records.</description>
    <inlineHelpText>Max points from LMS. Maps from GC maxPoints. Used to compute Grade_Pct__c on completion records.</inlineHelpText>
    <label>Points Possible</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>