force-app/main/default/objects/Course_Module_Activity__c/fields/Quest_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Quest_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admin-controlled gate. Only activities where Quest_Eligible__c = true may be used as source material for Trail Quest generation by Penny.</description>
    <inlineHelpText>Admin-controlled gate. Only activities where Quest_Eligible__c = true may be used as source material for Trail Quest generation by Penny.</inlineHelpText>
    <label>Quest Eligible</label>
    <type>Checkbox</type>
</CustomField>