force-app/main/default/objects/Course_Module_Activity__c/fields/SF_Skill_Tag__c.field-meta.xml
<CustomField>
    <fullName>SF_Skill_Tag__c</fullName>
    <description>Activity-level granularity for quest generation and RAG retrieval.</description>
    <inlineHelpText>Activity-level granularity for quest generation and RAG retrieval.</inlineHelpText>
    <label>SF Skill Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core-SF</fullName>
            </value>
            <value>
                <fullName>NPSP-Nonprofit-Cloud</fullName>
            </value>
            <value>
                <fullName>Flow-Builder</fullName>
            </value>
            <value>
                <fullName>Reports-Dashboards</fullName>
            </value>
            <value>
                <fullName>Experience-Cloud</fullName>
            </value>
            <value>
                <fullName>Security-Access</fullName>
            </value>
            <value>
                <fullName>Data-Management</fullName>
            </value>
            <value>
                <fullName>Apex-Basics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>