force-app/main/default/Objects/Course_Module_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>GoogleLink__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>