force-app/main/default/Objects/Course_Module_Activity__c/listViews/AllOpenActivities.listView-meta.xml
<ListView>
    <fullName>AllOpenActivities</fullName>
    <columns>NAME</columns>
    <columns>Activity_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>All Open Activites</label>
</ListView>